gitops/java/petclinic/overlays/uat/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: petclinic
spec:
  template:
    spec:
      containers:
      - image: quay.io/pittar/petclinic:uat
        name: petclinic
