gitops/java/petclinic/overlays/uat/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: petclinic
spec:
  host: app-petclinic-uat.apps.cluster-ott-407e.ott-407e.example.opentlc.com
status:
  ingress:
  - conditions:
    host: app-petclinic-uat.apps.cluster-ott-407e.ott-407e.example.opentlc.com
